[package]
name = "system"
version = "0.1.0"
authors = ["Technohacker <technohacker1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
